--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 [workspace]
 
 [dependencies]
+byteorder = "1.5.0"
+hmac = "0.12.1"
 risc0-zkvm = { version = "^2.0.2", default-features = false, features = ['std'] }
+sha1 = "0.10.6"
+sha2 = "0.10.9"
