--- a/methods/guest/Cargo.toml
+++ b/methods/guest/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 byteorder = "1.5.0"
 data-encoding = "2.9.0"
+hex = "0.4.3"
 hex-literal = "0.4.1"
 hmac = "0.12.1"
 risc0-zkvm = { version = "^2.0.2", default-features = false, features = ['std'] }
