--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -12,3 +12,6 @@ anyhow = "1.0.98"
 data-encoding = "2.9.0"
 hex-literal = "0.4.1"
 tracing = "0.1.41"
+byteorder = "1.5.0"
+hmac = "0.12.1"
+sha1 = "0.10.6"
