--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -16,3 +16,8 @@ byteorder = "1.5.0"
 hmac = "0.12.1"
 sha1 = "0.10.6"
 sha2 = "0.10.9"
+actix-web = { version = "4", features = ["macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+rand = "0.8"
+base64 = "0.21"
+bincode = "1.3"
